--- a/cloud2020/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud2020/cloud-provider-payment8001/src/main/resources/application.yml
@@ -21,6 +21,14 @@ spring:
       stat-view-servlet:
         enabled: true
 
+eureka:
+  instance:
+    prefer-ip-address: true
+    instance-id: cloud-payment-8001
+  client:
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
+
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
