--- a/cloud2020/pom.xml
+++ b/cloud2020/pom.xml
@@ -9,6 +9,16 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>cloud-provider-payment8001</module>
+        <module>cloud-consumer-order80</module>
+        <module>cloud-api-commons</module>
+        <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
+        <module>cloud-provider-payment8002</module>
+        <module>cloud-provider-payment8003</module>
+        <module>cloud-consumer-zk-order80</module>
+        <module>cloud-provice-consul-payment8004</module>
+        <module>cloud-consumer-consul-order80</module>
+        <module>cloud-consumer-openfegin-order80</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -100,6 +110,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
