--- a/cloud2020/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud2020/cloud-eureka-server7001/src/main/resources/application.yml
@@ -6,8 +6,8 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
     service-url:
-      defaultZone: http://eureka7002.com:7002/eureka/
-      #defaultZone: http://eureka7001.com:7001/eureka/ 单机模式
+      # defaultZone: http://eureka7002.com:7002/eureka/ 集群模式
+      defaultZone: http://eureka7001.com:7001/eureka/
   instance:
     hostname: eureka7001.com
   server:
