--- a/cloud2020/pom.xml
+++ b/cloud2020/pom.xml
@@ -19,6 +19,11 @@
         <module>cloud-provice-consul-payment8004</module>
         <module>cloud-consumer-consul-order80</module>
         <module>cloud-consumer-openfegin-order80</module>
+        <module>cloud-provider-hystrix-payment8001</module>
+        <module>cloud-consumer-feign-hystrix-order80</module>
+        <module>cloud-consumer-hystrix-dashboard9001</module>
+        <module>cloud-gateway-gateway9527</module>
+        <module>cloud-config-center3344</module>
     </modules>
 
     <packaging>pom</packaging>
