--- a/cloud2020/cloud-config-center3344/src/main/resources/application.yml
+++ b/cloud2020/cloud-config-center3344/src/main/resources/application.yml
@@ -10,9 +10,17 @@ spring:
           uri: https://github.com/meta-tsq/microservice-config.git
           default-label: main
           skip-ssl-validation: true
+  rabbitmq:
+    host: 192.168.0.12
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka
 
+##rabbitmq相关配置,暴露bus刷新配置的端点
+management:
+  endpoints: #暴露bus刷新配置的端点
+    web:
+      exposure:
+        include: 'bus-refresh'
