--- a/cloud2020/pom.xml
+++ b/cloud2020/pom.xml
@@ -29,6 +29,14 @@
         <module>cloud-stream-rabbitmq-provider8001</module>
         <module>cloud-stream-rabbitmq-consumer8802</module>
         <module>cloud-stream-rabbitmq-consumer8003</module>
+        <module>cloud-alibaba-rocketmq-provider8801</module>
+        <module>cloud-alibaba-rocketmq-consumer8802</module>
+        <module>cloud-alibaba-rocketmq-consumer8803</module>
+        <module>cloud-alibaba-provider-payment9001</module>
+        <module>cloud-alibaba-provider-payment9002</module>
+        <module>cloud-alibaba-consumer-order83</module>
+        <module>cloud-alibaba-config-necos-client3377</module>
+        <module>cloud-alibaba-sentinel-service8401</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -54,7 +62,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.2.2.RELEASE</version>
+                <version>2.2.5.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -62,7 +70,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.SR1</version>
+                <version>Hoxton.SR8</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -70,7 +78,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.1.0.RELEASE</version>
+                <version>2.2.4.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
