--- a/cloud2020/cloud-alibaba-consumer-order83/pom.xml
+++ b/cloud2020/cloud-alibaba-consumer-order83/pom.xml
@@ -17,6 +17,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!--SpringCloud ailibaba sentinel -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
