--- a/cloud2020/pom.xml
+++ b/cloud2020/pom.xml
@@ -37,6 +37,9 @@
         <module>cloud-alibaba-consumer-order83</module>
         <module>cloud-alibaba-config-necos-client3377</module>
         <module>cloud-alibaba-sentinel-service8401</module>
+        <module>seata-order-service2001</module>
+        <module>seata-storage-service2002</module>
+        <module>seata-account-service2003</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -63,6 +66,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.2.5.RELEASE</version>
+                <!--<version>2.2.2.RELEASE</version>-->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -70,7 +74,8 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.SR8</version>
+               <!-- <version>Hoxton.SR1</version>-->
+                <version>Hoxton.SR3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -78,7 +83,8 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.4.RELEASE</version>
+                <version>2.2.1.RELEASE</version>
+                <!--<version>2.1.0.RELEASE</version>-->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
